Add image urls to window to work in production

--- a/app/views/static_pages/root.html.erb
+++ b/app/views/static_pages/root.html.erb
@@ -1,1 +1,11 @@
+<script type="text/javascript">
+  window.images = {
+    devices:  "<%= image_url('devices.png') %>",
+    feature1: "<%= image_url('feature1.png') %>",
+    feature2: "<%= image_url('feature2.png') %>",
+    feature3: "<%= image_url('feature3.png') %>",
+    logo:     "<%= image_url('logo.jpg') %>"
+  }
+</script>
+
 <div id="root">React not working :P</div>
