--- a/app/assets/stylesheets/application.scss
+++ b/app/assets/stylesheets/application.scss
@@ -1,10 +1,12 @@
 @import './base/reset';
 @import './base/grid';
+@import './base/variables';
 @import './base/colors';
 @import './base/typography';
 @import './base/mixins';
 @import './base/buttons';
 @import './base/forms';
+@import './base/modals';
 
 @import "font-awesome";
 
