--- a/app/assets/stylesheets/projects/projectShow.scss
+++ b/app/assets/stylesheets/projects/projectShow.scss
@@ -49,11 +49,10 @@
 }
 
 .workflow-header {
+  width: 100%;
   background-color: #2c2d2f;
   display: block;
-  padding: 11px 10px;
-  text-shadow: 0;
-  box-shadow: 0 0 1px rgba(0,0,0,0.2);
+  padding: 10px;
   font-weight: 600;
   color: $white;
   font-size: 14px;
@@ -78,8 +77,8 @@
 }
 
 .workflow {
+  position: relative;
   vertical-align: top;
-  overflow-y: scroll;
   width: 360px;
   display: inline-block;
   height: 100vh;
