Add basic styles for story form

--- a/app/assets/stylesheets/application.scss
+++ b/app/assets/stylesheets/application.scss
@@ -18,4 +18,5 @@
 @import './projects/projectsIndex';
 @import './projects/projectShow';
 
-@import "./stories/story"
+@import "./stories/story";
+@import "./stories/storyForm";
