--- a/app/assets/stylesheets/stories/storyForm.scss
+++ b/app/assets/stylesheets/stories/storyForm.scss
@@ -35,7 +35,7 @@
     width: 100%;
     padding: 5px;
     border-radius: 3px;
-    border: 1px solid #cecece;
+    border: 1px solid #cdcdcd;
     resize: none;
   }
 
@@ -48,15 +48,19 @@
     padding-top: 10px;
     margin-bottom: 10px;
 
+    li {
+      border-bottom: 0;
+    }
+    
     li:first-of-type {
       border-top-left-radius: 3px;
       border-top-right-radius: 3px;
-      border-bottom: 0;
     }
     
     li:last-of-type {
       border-bottom-left-radius: 3px;
       border-bottom-right-radius: 3px;
+      border: 1px solid #cdcdcd;
     }
     
     li {
@@ -65,7 +69,8 @@
       color: #777;
       font-size: 10px;
       font-weight: 600;
-      border: 1px solid #ccc;
+      border: 1px solid #cdcdcd;
+      border-bottom: 0;
     }
   }
 
