--- a/app/assets/stylesheets/projects/projectShow.scss
+++ b/app/assets/stylesheets/projects/projectShow.scss
@@ -81,7 +81,7 @@
   vertical-align: top;
   width: 360px;
   display: inline-block;
-  height: 100vh;
+  height: 100%;
   background-color: #484f57;
   border-top: 1px solid #3e4346;
   border-left: 1px solid #111;
