--- a/app/assets/stylesheets/stories/story.scss
+++ b/app/assets/stylesheets/stories/story.scss
@@ -38,14 +38,20 @@
 .story-Rejected,
 .story-Delivered {
   background-color: #f3f3d1;
+  border-bottom: 1px solid #d1d1b0;
+  border-top: 1px solid #f6f6f4;
 }
 
 .story-Accepted {
   background-color: #daebcf;
+  border-bottom: 1px solid #c3d5b4;
+  border-top: 1px solid #e5f7d6;
 }
 
 .story-Icebox {
-  background-color: #e4eff7
+  background-color: #e4eff7;
+  border-bottom: 1px solid #c2cdd5;
+  border-top: 1px solid #f6fff9;
 }
 
 .icon-story {
