--- a/app/assets/stylesheets/projects/projectShow.scss
+++ b/app/assets/stylesheets/projects/projectShow.scss
@@ -4,8 +4,8 @@
 
 .sidebar {
   z-index: 10;
-  box-shadow: 5px 0 10px 0 rgba(0,0,0,.15);
-  background-color: #2f3337;
+  box-shadow: 5px 0 10px 0 rgba(0,0,0,.25);
+  background-color: #2c2d2f;
   width: 230px;
   position: absolute;
   top: 35px;
@@ -20,7 +20,6 @@
   padding: 8px;
   cursor: pointer;
   display: block;
-  text-shadow: 1px 1px rgba(0,0,0,0.8);
   color: #999;
   font-size: 12px;
   font-weight: 600;
@@ -44,8 +43,8 @@
   padding: 8px 16px;
   cursor: pointer;
   text-shadow: 0;
-  border-bottom: 1px solid black;
-  box-shadow: 0 0 1px rgba(0,0,0,0.2);
+  border-bottom: 1px solid #222;
+  margin-bottom: 8px;
 }
 
 .workflow-header {
@@ -59,9 +58,19 @@
 }
 
 .sidebar-count {
-  color: #777;
   float: right;
+  color: #777;
+  background-color: #333;
+  float: right;
+  font-size: 10px;
   margin-right: 8px;
+  border-radius: 50%;
+  margin-top: -2px;
+  padding: 3px 5px;
+}
+
+.active .sidebar-count {
+  color: #8fc1ee;
 }
 
 .workflow-container {
