--- a/app/views/static_pages/root.html.erb
+++ b/app/views/static_pages/root.html.erb
@@ -4,7 +4,8 @@
     feature1: "<%= image_url('feature1.png') %>",
     feature2: "<%= image_url('feature2.png') %>",
     feature3: "<%= image_url('feature3.png') %>",
-    logo:     "<%= image_url('logo.jpg') %>"
+    logo:     "<%= image_url('logo.jpg') %>",
+    logoClear: "<%= image_url('fav.png') %>"
   }
 </script>
 
