--- a/app/assets/stylesheets/stories/storyForm.scss
+++ b/app/assets/stylesheets/stories/storyForm.scss
@@ -1,7 +1,7 @@
 .story-form {
   background-color: #dedede;
-  padding: 10px;
-  box-shadow: inset 0 0 5px rgba(0,0,0,0.4);
+  padding: 20px;
+  box-shadow: inset 0 0 6px 3px rgba(0,0,0,0.15);
 
   input,
   textarea {
@@ -38,9 +38,9 @@
     }
     
     li {
-      background-color: #efefef;
+      background-color: white;
       padding: 10px;
-      color: #777;
+      color: #888;
       font-size: 10px;
       font-weight: 600;
       border: 1px solid #cdcdcd;
@@ -49,7 +49,7 @@
   }
 
   label {
-    color: #222;
+    color: #888;
     font-size: 10px;
     font-weight: 600;
     margin-bottom: 5px;
@@ -68,15 +68,20 @@
   font-size: 10px;
   font-weight: 600;
   cursor: pointer;
-  color: $white;
-
-  &:hover {
-    background-color: #dedede;
-  }
+  color: #ccc;
 
   &:focus {
     border: 0;
     outline: 0;
+  }
+}
+
+.story-form-button-cancel {
+  color: white;
+  background-color: #ccc;
+
+  &:hover {
+    background-color: #bbb;
   }
 }
 
@@ -111,6 +116,7 @@
 
   &:hover {
     background: none;
+    color: #aaa;
   }
 
   i {
@@ -142,6 +148,11 @@
   position: relative;
   text-transform: uppercase;
   vertical-align: middle;
+
+  &:hover {
+    color: #aaa;
+    border: 1px solid #aaa;
+  }
 }
 
 .point-select.no-blocks {
