--- a/app/assets/stylesheets/projects/projectShow.scss
+++ b/app/assets/stylesheets/projects/projectShow.scss
@@ -83,6 +83,13 @@
   font-size: 14px;
 }
 
+.workflow-points {
+  color: #ccc;
+  display: inline-block;
+  margin-left: 10px;
+  font-size: 10px;
+}
+
 .sidebar-count {
   float: right;
   color: #777;
