--- a/app/assets/stylesheets/pages/signIn.scss
+++ b/app/assets/stylesheets/pages/signIn.scss
@@ -1,4 +1,6 @@
 .signin {
-  background-color: $grey-light;
+  background-image: image_url("landing-jumbo-background");
   min-height: 100vh;
+  background-position: top 65px center;
+  background-repeat: no-repeat;
 }
