--- a/app/assets/stylesheets/base/buttons.scss
+++ b/app/assets/stylesheets/base/buttons.scss
@@ -1,52 +1,58 @@
 .button {
+  @extend %border-radius;
   display: inline-block;
   vertical-align: top;
   padding: 2px 8px;
   border-radius: 3px;
   font-size: 14px;
   transition: 0.5s background-color;
+  font-weight: 600;
+  border: none;
+  cursor: pointer;
+  line-height: 1.6;
+}
+
+.button-large {
+  padding: 10px;
 }
 
 .button-orange {
   background-color: $orange-primary;
-  border: 1px solid $orange-primary;
   color: $white;
 
   &:hover {
     background-color: $orange-dark;
-    border: 1px solid $orange-dark;
   }
 }
 
 .button-blue {
   background-color: $blue-primary;
-  border: 1px solid $blue-primary;
   color: $white;
   
   &:hover {
     background-color: $blue-dark;
-    border: 1px solid $blue-dark;
   }
 }
 
-.button-blue-outline {
-  border: 1px solid $blue-light;
-  color: $blue-light;
-  cursor: pointer;
+.button-group {
+  text-align: center;
+}
 
-  &:hover {
-    color: $blue-dark;
-  }
+.button-group .button:first-child {
+  border-radius: 3px 0 0 3px;
+  width: 50%;
+}
+
+.button-group .button:last-child {
+  border-radius: 0 3px 3px 0;
+  width: 50%;
 }
 
 .button-green {
-  @extend %border-radius;
-
   cursor: pointer;
   color: $white;  
   border: $green-dark;
-  font-size: 14px;
-  padding: 10px;
+  font-weight: 600;
   background-color: #57ac55;
   transition: 0.5s background-color;
 
