--- a/app/assets/stylesheets/shared/nav.scss
+++ b/app/assets/stylesheets/shared/nav.scss
@@ -20,16 +20,13 @@
 
 .navbar {
   padding: 15px 0;
-  border-bottom: 1px solid $blue-grey;
+  border-bottom: 1px solid #eee;
   background-color: $white;
 }
 
 .navbar-right {
   float: right;
   margin-top: 5px;
-}
-
-.nav-sign-in {
 }
 
 .navbar-right-text,
@@ -51,5 +48,27 @@
 .nav-signed-out {
   .button {
     margin-left: 8px;
+  }
+}
+
+.navbar-app-right {
+  float: right;
+  color: #c4dbe4;
+  font-size: 10px;
+  text-transform: uppercase;
+  font-weight: 700;
+
+  p,
+  a {
+    display: inline-block;
+    margin-left: 10px;
+  }
+
+  a {
+    cursor: pointer;
+    background-color: #114d6e;
+    padding: 3px 6px;
+    border-radius: 3px;
+    color: white;
   }
 }
