--- a/app/assets/stylesheets/users/signUp.scss
+++ b/app/assets/stylesheets/users/signUp.scss
@@ -1,10 +1,14 @@
-.signup-header {
-  margin-top: 50px;
-  text-align: center;
+.signup {
+  background-image: image_url("landing-jumbo-background");
+  min-height: 100vh;
+  background-position: top center;
+  background-repeat: no-repeat;
+  padding-top: 150px;
 
   .logo {
     display: block;
     margin-bottom: 30px;
+    text-align: center;
   }
 }
 
@@ -23,6 +27,7 @@
   font-size: 14px;
   font-weight: 600;
   text-align: center;
+  margin-top: 50px;
 
   a {
     color: $blue-primary;
