--- a/app/assets/stylesheets/projects/projectShow.scss
+++ b/app/assets/stylesheets/projects/projectShow.scss
@@ -2,7 +2,12 @@
   font-family: 'Open Sans', sans-serif;
 }
 
+.workflow-container {
+  transition: all 1s cubic-bezier(0, 1, 0.5, 1);
+}
+
 .sidebar {
+  transition: all 1s cubic-bezier(0, 1, 0.5, 1);
   z-index: 10;
   box-shadow: 5px 0 10px 0 rgba(0,0,0,.25);
   background-color: #2c2d2f;
@@ -44,12 +49,20 @@
   .sidebar {
     width: 50px;
 
+    .sidebar-link {
+      clear: both;
+      margin-bottom: 16px;
+    }
+
     .text {
-      display: none;
+      font-size: 10px;
+      margin-bottom: 8px;
     }
 
     .sidebar-count {
-      display: none;
+      display: block;
+      margin-top: 4px;
+      margin-bottom: 8px;
     }
   }
 
