--- a/app/assets/stylesheets/projects/projectShow.scss
+++ b/app/assets/stylesheets/projects/projectShow.scss
@@ -142,6 +142,15 @@
   border-left: 1px solid #111;
   border-right: 1px solid #111;
   margin-left: 5px;
+  transition: all 1s cubic-bezier(0, 1, 0.5, 1);
+}
+
+.workflow-show-undefined {
+  width: 0;
+  opacity: 0;
+  margin: 0;
+  border: 0;
+  overflow: hidden;
 }
 
 .workflow-hide-button {
