Make both session forms the same design

--- a/app/assets/stylesheets/pages/signIn.scss
+++ b/app/assets/stylesheets/pages/signIn.scss
@@ -1,6 +1,6 @@
-.signin {
-  background-image: image_url("landing-jumbo-background");
-  min-height: 100vh;
-  background-position: top 65px center;
-  background-repeat: no-repeat;
-}
+// .signin {
+//   background-image: image_url("landing-jumbo-background");
+//   min-height: 100vh;
+//   background-position: top center;
+//   background-repeat: no-repeat;
+// }
