Touch up styles

--- a/app/assets/stylesheets/pages/landing.scss
+++ b/app/assets/stylesheets/pages/landing.scss
@@ -2,6 +2,7 @@
   background-image: image_url("landing-jumbo-background");
   background-position: top 65px center;
   background-repeat: no-repeat;
+  color: #222;
 }
 
 .landing-jumbo {
