--- a/app/assets/stylesheets/base/forms.scss
+++ b/app/assets/stylesheets/base/forms.scss
@@ -45,16 +45,21 @@
 }
 
 .form-input {
-  @extend %inset-box-shadow;
-  text-align: center;
-  border: none;
+  text-align: left;
+  border: 1px solid #eee;
   display: block;
   font-size: 14px;
   font-weight: 600;
   margin-bottom: 10px;
   margin-top: 5px;
-  padding: 10px 20px;
+  padding: 10px; 
   width: 100%;
+  transition: all 0.5s;
+
+  &:focus {
+    border: 1px solid $green-primary;
+    box-shadow: 0 0 5px $green-primary;
+  }
 }
 
 .form-footer {
