--- a/app/assets/stylesheets/projects/projectsIndex.scss
+++ b/app/assets/stylesheets/projects/projectsIndex.scss
@@ -53,13 +53,10 @@
 .projectIndex-myprojects {
   margin-top: 50px;
   margin-bottom: 20px;
+  font-weight: 700;
 
   i {
     margin-right: 10px;
-  }
-
-  span {
-    font-weight: 600;
   }
 }
 
@@ -70,6 +67,7 @@
   margin-right: 2%;
   float: left;
   margin-bottom: 20px;
+  border-radius: 5px;
 
   i,
   button {
@@ -78,10 +76,6 @@
       color: #bbb;
     }
   }
-}
-
-.projectIndexItem:nth-of-type(2n) {
-  margin-right: 0;
 }
 
 .projectIndexItem:nth-of-type(2n) {
@@ -116,5 +110,28 @@
     cursor: pointer;
     padding: 5px;
     margin-left: 5px;
+  }
+}
+
+.project-placeholder {
+  padding: 150px 0;
+  text-align: center;
+  background: white;
+  border-radius: 10px;
+  border: 1px solid #ddd;
+  font-weight: 700;
+  font-size: 20px;
+
+  i {
+    margin-right: 20px;
+  }
+  
+  h4 {
+    margin-bottom: 50px;
+  }
+
+  button {
+    display: inline-block;
+    float: none;
   }
 }
